pierwszy test- test_rent_movie-dziala

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/testy.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.fitnesse-standalone.jar=E:\\STUDIA PWR-INFORMATYKA\\SEMESTR V\\Inzynieria Oprogramowania\\FitNesse\\fitnesse-standalone.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.fitnesse-standalone.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=App
+main.class=wypo.App
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
